# python-project-50

./: Makefile  README.md  coverage.lcov  pyproject.toml
.github/workflows/: my_workflow.yml
gendiff/formatters/: format_identifier.py  plain.py  stylish.py
gendiff/scripts/: find_diff.py  gendiff.py  generate_diff.py  parser.py
tests/: test_gendiff.py
tests/test_data/: expected_result_json_format.txt  expected_result_yaml.txt  file1.json  file1.yaml
