[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "codeclimate-test-reporter>=0.2.3",
    "pytest-cov>=6.0.0",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
